--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,6 +16,8 @@ jobs:
           node-version: 22
       - name: Install Dependencies
         run: cd functions && npm install
+      - name: Install Dependencies
+        run:  npm install -g firebase-tools
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
