--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/rimraf": "^4.0.5",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
